--- a/translations/game+intl-icu.en.xlf
+++ b/translations/game+intl-icu.en.xlf
@@ -766,7 +766,7 @@
       <notes>
         <note category="german">Zombies</note>
         <note category="state">new</note>
-        <note category="from">twig:///templates/ajax/game/newspaper.html.twig;twig:///templates/ajax/game/town/watchtower.html.twig</note>
+        <note category="from">twig:///templates/ajax/game/gazette_widget.html.twig;twig:///templates/ajax/game/newspaper.html.twig;twig:///templates/ajax/game/town/watchtower.html.twig</note>
       </notes>
       <segment>
         <source>Zombies</source>
@@ -947,7 +947,7 @@
     <unit id="77.Cp5H" name="Verteidigung">
       <notes>
         <note category="german">Verteidigung</note>
-        <note category="from">twig:///templates/ajax/game/newspaper.html.twig;twig:///templates/ajax/game/town/dump.html.twig;twig:///templates/ajax/game/town/home.html.twig;twig:///templates/ajax/game/town/home_foreign.html.twig</note>
+        <note category="from">twig:///templates/ajax/game/gazette_widget.html.twig;twig:///templates/ajax/game/newspaper.html.twig;twig:///templates/ajax/game/town/dump.html.twig;twig:///templates/ajax/game/town/home.html.twig;twig:///templates/ajax/game/town/home_foreign.html.twig</note>
       </notes>
       <segment>
         <source>Verteidigung</source>
@@ -1238,7 +1238,7 @@
     <unit id="7F000hR" name="Todesursache">
       <notes>
         <note category="german">Todesursache</note>
-        <note category="from">twig:///templates/ajax/game/newspaper.html.twig;twig:///templates/ajax/game/town/citizen.html.twig;twig:///templates/ajax/game/town/home_foreign.html.twig</note>
+        <note category="from">twig:///templates/ajax/game/gazette_widget.html.twig;twig:///templates/ajax/game/newspaper.html.twig;twig:///templates/ajax/game/town/citizen.html.twig;twig:///templates/ajax/game/town/home_foreign.html.twig</note>
       </notes>
       <segment>
         <source>Todesursache</source>
@@ -9026,7 +9026,7 @@ Each upgrade brings various advantages (defence, water, special skills...).It's 
     <unit id="8fTcb5D" name="Tote in der Stadt">
       <notes>
         <note category="german">Tote in der Stadt</note>
-        <note category="from">twig:///templates/ajax/game/newspaper.html.twig</note>
+        <note category="from">twig:///templates/ajax/game/gazette_widget.html.twig;twig:///templates/ajax/game/newspaper.html.twig</note>
       </notes>
       <segment>
         <source>Tote in der Stadt</source>
@@ -9036,7 +9036,7 @@ Each upgrade brings various advantages (defence, water, special skills...).It's 
     <unit id="wvs954U" name="Niemand!">
       <notes>
         <note category="german">Niemand!</note>
-        <note category="from">twig:///templates/ajax/game/newspaper.html.twig</note>
+        <note category="from">twig:///templates/ajax/game/gazette_widget.html.twig;twig:///templates/ajax/game/newspaper.html.twig</note>
       </notes>
       <segment>
         <source>Niemand!</source>
@@ -9046,7 +9046,7 @@ Each upgrade brings various advantages (defence, water, special skills...).It's 
     <unit id="ooesDbN" name="Sonstige Opfer">
       <notes>
         <note category="german">Sonstige Opfer</note>
-        <note category="from">twig:///templates/ajax/game/newspaper.html.twig</note>
+        <note category="from">twig:///templates/ajax/game/gazette_widget.html.twig;twig:///templates/ajax/game/newspaper.html.twig</note>
       </notes>
       <segment>
         <source>Sonstige Opfer</source>
@@ -9056,7 +9056,7 @@ Each upgrade brings various advantages (defence, water, special skills...).It's 
     <unit id="kxeEpoF" name="Opfer">
       <notes>
         <note category="german">Opfer</note>
-        <note category="from">twig:///templates/ajax/game/newspaper.html.twig</note>
+        <note category="from">twig:///templates/ajax/game/gazette_widget.html.twig;twig:///templates/ajax/game/newspaper.html.twig</note>
       </notes>
       <segment>
         <source>Opfer</source>
@@ -9066,7 +9066,7 @@ Each upgrade brings various advantages (defence, water, special skills...).It's 
     <unit id="w60IHjv" name="Keine Opfer">
       <notes>
         <note category="german">Keine Opfer</note>
-        <note category="from">twig:///templates/ajax/game/newspaper.html.twig</note>
+        <note category="from">twig:///templates/ajax/game/gazette_widget.html.twig;twig:///templates/ajax/game/newspaper.html.twig</note>
       </notes>
       <segment>
         <source>Keine Opfer</source>
@@ -9799,7 +9799,7 @@ Each upgrade brings various advantages (defence, water, special skills...).It's 
     <unit id="dY6rVb6" name="Tor ist offen!">
       <notes>
         <note category="german">Tor ist offen!</note>
-        <note category="from">twig:///templates/ajax/game/newspaper.html.twig</note>
+        <note category="from">twig:///templates/ajax/game/gazette_widget.html.twig;twig:///templates/ajax/game/newspaper.html.twig</note>
       </notes>
       <segment>
         <source>Tor ist offen!</source>
@@ -9809,7 +9809,7 @@ Each upgrade brings various advantages (defence, water, special skills...).It's 
     <unit id="1cEye.o" name="Zombies sind eingedrungen.">
       <notes>
         <note category="german">Zombies sind eingedrungen.</note>
-        <note category="from">twig:///templates/ajax/game/newspaper.html.twig</note>
+        <note category="from">twig:///templates/ajax/game/gazette_widget.html.twig;twig:///templates/ajax/game/newspaper.html.twig</note>
       </notes>
       <segment>
         <source>Zombies sind eingedrungen.</source>
@@ -9819,7 +9819,7 @@ Each upgrade brings various advantages (defence, water, special skills...).It's 
     <unit id="ojehKlj" name="vor Angst erstarrt">
       <notes>
         <note category="german">vor Angst erstarrt</note>
-        <note category="from">twig:///templates/ajax/game/newspaper.html.twig</note>
+        <note category="from">twig:///templates/ajax/game/gazette_widget.html.twig;twig:///templates/ajax/game/newspaper.html.twig</note>
       </notes>
       <segment>
         <source>vor Angst erstarrt</source>
@@ -15396,7 +15396,7 @@ Each upgrade brings various advantages (defence, water, special skills...).It's 
     <unit id="OhpvQec" name="im Nordwesten">
       <notes>
         <note category="german">im Nordwesten</note>
-        <note category="from">php:///src/Controller/GameController.php;twig:///templates/ajax/game/beyond/desert.html.twig;twig:///templates/ajax/game/newspaper.html.twig</note>
+        <note category="from">php:///src/Controller/GameController.php;twig:///templates/ajax/game/beyond/desert.html.twig;twig:///templates/ajax/game/gazette_widget.html.twig;twig:///templates/ajax/game/newspaper.html.twig</note>
       </notes>
       <segment>
         <source>im Nordwesten</source>
@@ -15406,7 +15406,7 @@ Each upgrade brings various advantages (defence, water, special skills...).It's 
     <unit id="dHF9hg3" name="im Norden">
       <notes>
         <note category="german">im Norden</note>
-        <note category="from">php:///src/Controller/GameController.php;twig:///templates/ajax/game/beyond/desert.html.twig;twig:///templates/ajax/game/newspaper.html.twig</note>
+        <note category="from">php:///src/Controller/GameController.php;twig:///templates/ajax/game/beyond/desert.html.twig;twig:///templates/ajax/game/gazette_widget.html.twig;twig:///templates/ajax/game/newspaper.html.twig</note>
       </notes>
       <segment>
         <source>im Norden</source>
@@ -15416,7 +15416,7 @@ Each upgrade brings various advantages (defence, water, special skills...).It's 
     <unit id="8VW_Ac6" name="im Nordosten">
       <notes>
         <note category="german">im Nordosten</note>
-        <note category="from">php:///src/Controller/GameController.php;twig:///templates/ajax/game/beyond/desert.html.twig;twig:///templates/ajax/game/newspaper.html.twig</note>
+        <note category="from">php:///src/Controller/GameController.php;twig:///templates/ajax/game/beyond/desert.html.twig;twig:///templates/ajax/game/gazette_widget.html.twig;twig:///templates/ajax/game/newspaper.html.twig</note>
       </notes>
       <segment>
         <source>im Nordosten</source>
@@ -15426,7 +15426,7 @@ Each upgrade brings various advantages (defence, water, special skills...).It's 
     <unit id="CGH7WpP" name="im Westen">
       <notes>
         <note category="german">im Westen</note>
-        <note category="from">php:///src/Controller/GameController.php;twig:///templates/ajax/game/beyond/desert.html.twig;twig:///templates/ajax/game/newspaper.html.twig</note>
+        <note category="from">php:///src/Controller/GameController.php;twig:///templates/ajax/game/beyond/desert.html.twig;twig:///templates/ajax/game/gazette_widget.html.twig;twig:///templates/ajax/game/newspaper.html.twig</note>
       </notes>
       <segment>
         <source>im Westen</source>
@@ -15436,7 +15436,7 @@ Each upgrade brings various advantages (defence, water, special skills...).It's 
     <unit id="GrDc37F" name="im Osten">
       <notes>
         <note category="german">im Osten</note>
-        <note category="from">php:///src/Controller/GameController.php;twig:///templates/ajax/game/beyond/desert.html.twig;twig:///templates/ajax/game/newspaper.html.twig</note>
+        <note category="from">php:///src/Controller/GameController.php;twig:///templates/ajax/game/beyond/desert.html.twig;twig:///templates/ajax/game/gazette_widget.html.twig;twig:///templates/ajax/game/newspaper.html.twig</note>
       </notes>
       <segment>
         <source>im Osten</source>
@@ -15446,7 +15446,7 @@ Each upgrade brings various advantages (defence, water, special skills...).It's 
     <unit id="luEGXBn" name="im Südwesten">
       <notes>
         <note category="german">im Südwesten</note>
-        <note category="from">php:///src/Controller/GameController.php;twig:///templates/ajax/game/beyond/desert.html.twig;twig:///templates/ajax/game/newspaper.html.twig</note>
+        <note category="from">php:///src/Controller/GameController.php;twig:///templates/ajax/game/beyond/desert.html.twig;twig:///templates/ajax/game/gazette_widget.html.twig;twig:///templates/ajax/game/newspaper.html.twig</note>
       </notes>
       <segment>
         <source>im Südwesten</source>
@@ -15456,7 +15456,7 @@ Each upgrade brings various advantages (defence, water, special skills...).It's 
     <unit id="UpG6M6C" name="im Süden">
       <notes>
         <note category="german">im Süden</note>
-        <note category="from">php:///src/Controller/GameController.php;twig:///templates/ajax/game/beyond/desert.html.twig;twig:///templates/ajax/game/newspaper.html.twig</note>
+        <note category="from">php:///src/Controller/GameController.php;twig:///templates/ajax/game/beyond/desert.html.twig;twig:///templates/ajax/game/gazette_widget.html.twig;twig:///templates/ajax/game/newspaper.html.twig</note>
       </notes>
       <segment>
         <source>im Süden</source>
@@ -15466,7 +15466,7 @@ Each upgrade brings various advantages (defence, water, special skills...).It's 
     <unit id="G2GbQ43" name="im Südosten">
       <notes>
         <note category="german">im Südosten</note>
-        <note category="from">php:///src/Controller/GameController.php;twig:///templates/ajax/game/beyond/desert.html.twig;twig:///templates/ajax/game/newspaper.html.twig</note>
+        <note category="from">php:///src/Controller/GameController.php;twig:///templates/ajax/game/beyond/desert.html.twig;twig:///templates/ajax/game/gazette_widget.html.twig;twig:///templates/ajax/game/newspaper.html.twig</note>
       </notes>
       <segment>
         <source>im Südosten</source>
@@ -15606,7 +15606,7 @@ Each upgrade brings various advantages (defence, water, special skills...).It's 
     <unit id="3UYzFfF">
       <notes>
         <note category="german">Mysteriöse metereologische Phänomene haben gestern Nacht dafür gesorgt, dass sich bestimmte Zonen &lt;strong&gt;{sector} der Stadt&lt;/strong&gt; regeneriert haben.&lt;p&gt;&lt;em&gt;Es können dort durch Graben wieder Gegenstände gefunden werden, auch wenn die Zone zuvor leergesucht wurde!&lt;/em&gt;&lt;/p&gt;</note>
-        <note category="from">twig:///templates/ajax/game/newspaper.html.twig</note>
+        <note category="from">twig:///templates/ajax/game/gazette_widget.html.twig;twig:///templates/ajax/game/newspaper.html.twig</note>
       </notes>
       <segment>
         <source>Mysteriöse metereologische Phänomene haben gestern Nacht dafür gesorgt, dass sich bestimmte Zonen &lt;strong&gt;{sector} der Stadt&lt;/strong&gt; regeneriert haben.&lt;p&gt;&lt;em&gt;Es können dort durch Graben wieder Gegenstände gefunden werden, auch wenn die Zone zuvor leergesucht wurde!&lt;/em&gt;&lt;/p&gt;</source>
@@ -15616,7 +15616,7 @@ Each upgrade brings various advantages (defence, water, special skills...).It's 
     <unit id="2ZzcscP" name="Verlorenes Brunnenwasser: {count} Einhet(en)">
       <notes>
         <note category="german">Verlorenes Brunnenwasser: {count__copy} Einhet(en)</note>
-        <note category="from">twig:///templates/ajax/game/newspaper.html.twig</note>
+        <note category="from">twig:///templates/ajax/game/gazette_widget.html.twig;twig:///templates/ajax/game/newspaper.html.twig</note>
       </notes>
       <segment>
         <source>Verlorenes Brunnenwasser: {count} Einhet(en)</source>
@@ -20383,7 +20383,7 @@ Each upgrade brings various advantages (defence, water, special skills...).It's 
     <unit id="oZCdnHO" name="Das wird aber nicht lange so bleiben...">
       <notes>
         <note category="german">Das wird aber nicht lange so bleiben...</note>
-        <note category="from">twig:///templates/ajax/game/newspaper.html.twig</note>
+        <note category="from">twig:///templates/ajax/game/gazette_widget.html.twig;twig:///templates/ajax/game/newspaper.html.twig</note>
       </notes>
       <segment>
         <source>Das wird aber nicht lange so bleiben...</source>
@@ -20393,7 +20393,7 @@ Each upgrade brings various advantages (defence, water, special skills...).It's 
     <unit id="fJDK8V7" name="Das macht dann... {day} Tage">
       <notes>
         <note category="german">Das macht dann... {day} Tage</note>
-        <note category="from">twig:///templates/ajax/game/newspaper.html.twig</note>
+        <note category="from">twig:///templates/ajax/game/gazette_widget.html.twig;twig:///templates/ajax/game/newspaper.html.twig</note>
       </notes>
       <segment>
         <source>Das macht dann... {day} Tage</source>
@@ -21523,7 +21523,7 @@ Each upgrade brings various advantages (defence, water, special skills...).It's 
     <unit id="sXukPwK" name="Immerhin wurden alle Bürger aus der Stadt geschleudert...">
       <notes>
         <note category="german">Immerhin wurden alle Bürger aus der Stadt geschleudert...</note>
-        <note category="from">twig:///templates/ajax/game/newspaper.html.twig</note>
+        <note category="from">twig:///templates/ajax/game/gazette_widget.html.twig;twig:///templates/ajax/game/newspaper.html.twig</note>
       </notes>
       <segment>
         <source>Immerhin wurden alle Bürger aus der Stadt geschleudert...</source>
@@ -22510,7 +22510,7 @@ Each upgrade brings various advantages (defence, water, special skills...).It's 
     <unit id="o0S7jOB" name="Tag {d} {today}">
       <notes>
         <note category="german">Tag {d} {today}</note>
-        <note category="from">twig:///templates/ajax/game/log_content.html.twig</note>
+        <note category="from">twig:///templates/ajax/admin/towns/explorer.html.twig;twig:///templates/ajax/game/log_content.html.twig</note>
       </notes>
       <segment>
         <source>Tag {d} {today}</source>
@@ -23232,7 +23232,6 @@ Each upgrade brings various advantages (defence, water, special skills...).It's 
       <notes>
         <note category="german">&lt;strong&gt;Herzlichen Glückwunsch&lt;/strong&gt;, du hast Folgendes freigeschaltet: {list}</note>
         <note category="from">db://LogEntryTemplate</note>
-        <note category="state">new</note>
       </notes>
       <segment>
         <source>&lt;strong&gt;Herzlichen Glückwunsch&lt;/strong&gt;, du hast Folgendes freigeschaltet: {list}</source>
