FR Translations for unique and special rewards

--- a/translations/game+intl-icu.fr.xlf
+++ b/translations/game+intl-icu.fr.xlf
@@ -20242,7 +20242,7 @@
       </notes>
       <segment>
         <source>Einzigartige Errungenschaften</source>
-        <target>Einzigartige Errungenschaften</target>
+        <target>Récompenses uniques</target>
       </segment>
     </unit>
     <unit id="IdcXWbV" name="Besondere Errungenschaften">
@@ -20253,7 +20253,7 @@
       </notes>
       <segment>
         <source>Besondere Errungenschaften</source>
-        <target>Besondere Errungenschaften</target>
+        <target>Récompenses spéciales</target>
       </segment>
     </unit>
     <unit id="FTqbUsX">
@@ -20264,7 +20264,7 @@
       </notes>
       <segment>
         <source>Dies ist eine besondere Errungenschaft, die im Rahmen eines Events verliehen wurde.</source>
-        <target>Dies ist eine besondere Errungenschaft, die im Rahmen eines Events verliehen wurde.</target>
+        <target>Il s’agit d’une récompense spéciale qui a été décernée dans le cadre d’un événement.</target>
       </segment>
     </unit>
     <unit id="uB8frFP">
@@ -20275,7 +20275,7 @@
       </notes>
       <segment>
         <source>Dies ist eine einzigartige Errungenschaft, die im Rahmen eines Events verliehen wurde.</source>
-        <target>Dies ist eine einzigartige Errungenschaft, die im Rahmen eines Events verliehen wurde.</target>
+        <target>Il s’agit d’une récompense unique qui a été décernée dans le cadre d’un événement.</target>
       </segment>
     </unit>
     <unit id="QOeiiDo">
