--- a/translations/game+intl-icu.en.xlf
+++ b/translations/game+intl-icu.en.xlf
@@ -20294,7 +20294,7 @@ Each upgrade brings various advantages (defence, water, special skills...).It's 
       </notes>
       <segment>
         <source>Einzigartige Errungenschaften</source>
-        <target>Einzigartige Errungenschaften</target>
+        <target>Unique rewards</target>
       </segment>
     </unit>
     <unit id="IdcXWbV" name="Besondere Errungenschaften">
@@ -20305,7 +20305,7 @@ Each upgrade brings various advantages (defence, water, special skills...).It's 
       </notes>
       <segment>
         <source>Besondere Errungenschaften</source>
-        <target>Besondere Errungenschaften</target>
+        <target>Special rewards</target>
       </segment>
     </unit>
     <unit id="FTqbUsX">
@@ -20316,7 +20316,7 @@ Each upgrade brings various advantages (defence, water, special skills...).It's 
       </notes>
       <segment>
         <source>Dies ist eine besondere Errungenschaft, die im Rahmen eines Events verliehen wurde.</source>
-        <target>Dies ist eine besondere Errungenschaft, die im Rahmen eines Events verliehen wurde.</target>
+        <target>This is a special reward that was awarded as part of an event.</target>
       </segment>
     </unit>
     <unit id="uB8frFP">
@@ -20327,7 +20327,7 @@ Each upgrade brings various advantages (defence, water, special skills...).It's 
       </notes>
       <segment>
         <source>Dies ist eine einzigartige Errungenschaft, die im Rahmen eines Events verliehen wurde.</source>
-        <target>Dies ist eine einzigartige Errungenschaft, die im Rahmen eines Events verliehen wurde.</target>
+        <target>This is a unique reward that was awarded as part of an event.</target>
       </segment>
     </unit>
     <unit id="QOeiiDo">
